[gd_scene load_steps=2 format=3 uid="uid://c1posnfc3ruce"]

[ext_resource type="Script" path="res://World/Player/Player/SpeedParticles.gd" id="1_er86h"]

[node name="SpeedParticles" type="Node2D"]
position = Vector2(0, -16)
script = ExtResource("1_er86h")

[node name="Parts3" type="CPUParticles2D" parent="."]
modulate = Color(1.35, 1.35, 1.35, 1)
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 24.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
color = Color(0.14902, 0.466667, 0.937255, 1)

[node name="Parts2" type="CPUParticles2D" parent="."]
modulate = Color(1.35, 1.35, 1.35, 1)
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 24.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
color = Color(0.545098, 0.701961, 0.937255, 1)

[node name="Parts1" type="CPUParticles2D" parent="."]
modulate = Color(1.35, 1.35, 1.35, 1)
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 24.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
color = Color(0.145098, 0.305882, 0.545098, 1)

[node name="SpeedStateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpeedStateTimer" to="." method="_on_SpeedStateTimer_timeout"]
